<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button 
        android:id="@+id/select_devices_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_devices_btn"/>
    <Button
        android:id="@+id/time_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_btn" />

    <Button
        android:id="@+id/dow_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dow_btn" />

    <Button
        android:id="@+id/lightness_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lightness_btn" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    	<Button
	        android:id="@+id/cancel_btn"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="?android:attr/borderlessButtonStyle"
	        android:text="@string/cancel_btn" />
    	<Button
	        android:id="@+id/confim_btn"
	        android:layout_width="match_parent"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        style="?android:attr/borderlessButtonStyle"
	        android:text="@string/confirm_btn" />
    </LinearLayout>
    
</LinearLayout>
