<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView_lights"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:layout_weight="1"
        android:src="@drawable/d0"
        android:background="#000"/>
    
    <SeekBar
        android:id="@+id/seekBar_lightness"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:max="127" />
    
    <Button
        android:id="@+id/btn_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_on" />

    <Button
        android:id="@+id/btn_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_off" />
</LinearLayout>